# tach-django-prototype

./: .gitignore  README.md  manage.py  pyproject.toml
gcn/: admin.py  apps.py  models.py  views.py
gcn/migrations/: 0001_initial.py  0002_auto_20200305_2337.py
tach/: asgi.py  settings.py  urls.py  wsgi.py
