[tool.poetry]
name = "tach"
version = "0.1.0"
description = "Time-domain Astronomy Coordination Hub"
authors = ["Leo Singer <leo.singer@ligo.org>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
django = "*"
djangorestframework = "*"
pyyaml = "*"
uritemplate = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
